language/move-lang/tests/move_check/expansion/number_literal_too_long_u64.exp
error[E01006]: invalid number literal
  ┌─ tests/move_check/expansion/number_literal_too_long_u64.move:4:9
  │
4 │         0x1FFFFFFFFFFFFFFFFu64;
  │         ^^^^^^^^^^^^^^^^^^^^^^ Invalid number literal. The given literal is too large to fit into 'u64'

error[E01006]: invalid number literal
  ┌─ tests/move_check/expansion/number_literal_too_long_u64.move:6:9
  │
6 │         18446744073709551616u64;
  │         ^^^^^^^^^^^^^^^^^^^^^^^ Invalid number literal. The given literal is too large to fit into 'u64'

