language/move-lang/tests/move_check/expansion/number_literal_too_long_u64.move
module 0x42::M {
    fun long_u64() {
        0x0FFFFFFFFFFFFFFFFu64;
        0x1FFFFFFFFFFFFFFFFu64;
        18446744073709551615u64;
        18446744073709551616u64;
    }
}
